--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* styles.css */
 body {
     font-family: sans-serif;
     color: #333;
@@ -61,3 +62,4 @@ body {
     font-style: italic;
     margin-bottom: 0.5em;
   }
+  
